--- a/UnitConverter.ipynb
+++ b/UnitConverter.ipynb
@@ -700,6 +700,44 @@
       "metadata": {
         "id": "JneqVeVQZ0ho"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> **Prompt 2**\n",
+        "\n",
+        "\n",
+        "\n",
+        "> reframe this into git cli with github repository  and full function sourcecode for week2/sprint 2\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "440GCN5mcjdU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "อัพโหลดไฟล์ลงไปใน Github\n",
+        "Github link: [Click here!](https://github.com/RatchapoomTH/UnitConverter_script_programming_project/blob/main/UnitConverter.ipynb)"
+      ],
+      "metadata": {
+        "id": "SZ0J_pZTcuX5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "crjSr_L9c0OY"
+      }
     }
   ]
 }
